<resources>
    <string name="app_name">BT10iBeaconTxRx</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">Under construction ..</string>

    <!-- for LDrawer -->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string-array name="menu_list_items">
        <item>Beacon Receiver</item>
        <item>Beacon Transmitter</item>
        <item>WiFi Receiver</item>
        <item>WiFi Transmitter</item>
        <item>0. Fingerprint Marker</item>
        <item>1. Find Landmark</item>
        <item>2. Find D Landmark</item>
        <item>3. Find Fingerprint</item>
        <item>Exit</item>
    </string-array>

    <!-- wifi strings -->
    <string name="wifi_default_wifi_ssid">NoName</string>
    <string name="wifi_default_wifi_bssid">00:00:00:00:00:00</string>
    <string name="wifi_SMT1_wifi_ssid">SM705</string>
    <string name="wifi_SMT1_wifi_bssid">b4:0b:44:0b:60:e8</string>

    <!-- wifi fingerprint marker -->
    <string name="wifi_fingerprint_name_hint">Fingerprint Name</string>
    <string name="wifi_fingerprint_default_name">Fingerprint</string>

    <!-- wifi find fingerprint fragment -->
    <string name="wifi_find_fingerprint_button_set_target">Target</string>
    <string name="wifi_find_fingerprint_topple_text">RSS</string>
    <string name="wifi_find_fingerprint_settings">Settings</string>
    <string name="seek_bar_text_eff_ap_number"># Eff AP:</string>
    <string name="seek_bar_text_sampling_number"># Sample:</string>
    <string name="seek_bar_text_low_peak_window">Peak W:</string>
    <string name="seek_bar_text_ema_factor">EMA F:</string>
    <string name="text_view_text_status_title">Status</string>
    <string name="text_view_text_ap_number"># Scanned AP:</string>
    <string name="text_view_text_similar_distance">SD:</string>
    <string name="text_view_text_smoothed_similar_distance">Smo SD:</string>
    <string name="text_view_text_historical_minimum">Min:</string>
    <string name="text_view_text_low_peak">Low peak:</string>
    <string name="text_view_text_step_counter">Step counter:</string>
    <string name="text_view_text_status_outcome_title">Outcome:</string>

</resources>
